hello_digitalboxdir = $(datadir)/$(PACKAGE)/web
#hello_digitalboxdir = $(datadir)/web
hello_digitalbox_DATA = info.php 

#nobase_hello_digitalbox_DATA = css/bootstrap-theme.css css/bootstrap-theme.css.map css/bootstrap-theme.min.css css/bootstrap-theme.min.css.map css/bootstrap.css css/bootstrap.css.map css/bootstrap.min.css css/bootstrap.min.css.map fonts/glyphicons-halflings-regular.eot fonts/glyphicons-halflings-regular.svg fonts/glyphicons-halflings-regular.ttf fonts/glyphicons-halflings-regular.woff fonts/glyphicons-halflings-regular.woff2 js/bootstrap.js js/bootstrap.min.js js/npm.js
